--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@prisma/client": "6.5.0",
+    "@types/bcryptjs": "2.4.6",
+    "bcryptjs": "3.0.2",
     "dotenv": "16.4.7",
     "fastify": "5.2.1",
     "zod": "3.24.2"
