feat: create a new folder to tests

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsup src —out-dir build",
     "start": "node build server.js",
-    "test": "vitest run --dir src/use-cases",
-    "test:watch": "vitest --dir src/use-cases"
+    "test": "vitest run --dir tests/use-cases",
+    "test:watch": "vitest --dir tests/use-cases"
   },
   "keywords": [],
   "author": "",
