--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "vitest": "3.0.8"
   },
   "dependencies": {
+    "@fastify/cookie": "11.0.2",
+    "@fastify/jwt": "9.1.0",
     "@prisma/client": "6.5.0",
     "@types/bcryptjs": "2.4.6",
     "bcryptjs": "3.0.2",
