--- a/package.json
+++ b/package.json
@@ -7,15 +7,23 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsup src —out-dir build",
     "start": "node build server.js",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "test": "vitest run --dir tests/use-cases",
-    "test:watch": "vitest --dir tests/use-cases"
+    "test:watch": "vitest --dir tests/use-cases",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir tests/controllers",
+    "test:e2e:watch": "vitest --dir tests/controllers"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "22.13.10",
+    "@types/supertest": "6.0.2",
+    "npm-run-all": "4.1.5",
     "prisma": "6.5.0",
+    "supertest": "7.0.0",
     "tsup": "8.4.0",
     "tsx": "4.19.3",
     "typescript": "5.8.2",
